footer alignment corrections

--- a/css/theme-base.css
+++ b/css/theme-base.css
@@ -2656,8 +2656,8 @@ body.device-xs .col-md-3 .flickr-widget img {
     padding: 60px 0 40px 0;
 }
 .footer-content .widget-title {
-    font-size: 16px;
-    font-weight: 600;
+    font-size: 18px;
+    font-weight: 800;
     margin-bottom: 21px;
 }
 .copyright-content {
