--- a/css/theme-elements.css
+++ b/css/theme-elements.css
@@ -1874,7 +1874,7 @@ SOCIAL ICONS
     float: left;
     height: 32px;
     width: 32px;
-    line-height: 32px;
+    line-height: 40px;
     font-size: 16px;
     text-align: center;
     margin: 0 8px 8px 0;
